# wpackages

./: .gitignore  .gitmodules  README.md  TODO.md  biome.jsonc  dprint.json  files_to_delete.txt  lefthook.yml  package.json  tokei_output.txt  tsconfig.json  turbo.json  vitest.workspace.ts  wtest.config.ts
apps/api/marketplace/: Cargo.toml  Config.toml  README.md  package.json
apps/api/marketplace/.sqlx/: sqlx-data.json
apps/api/marketplace/migrations/: 20240113000001_create_extensions_table.sql
apps/api/marketplace/src/: app.rs  error.rs  lib.rs  main.rs  telemetry.rs
apps/cli/ai-tui/: .rustfmt.toml  Cargo.toml  Config.toml  README.md  package.json
apps/cli/ai-tui/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  prelude.rs  telemetry.rs
apps/cli/ai-tui/tests/: config_test.rs  error_test.rs  integration_test.rs
apps/cli/rvim/: Cargo.toml  Config.toml  README.md  deny.toml  idea-features.md  package.json  tracing.toml
apps/cli/rvim/.cargo/: config.toml
apps/cli/rvim/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  prelude.rs  telemetry.rs
apps/cli/terminal/: .gitignore  Cargo.toml  Config.toml  README.md  deny.toml  nuxt.config.ts  package.json  tauri.conf.json  tracing.toml  uno.config.ts
apps/cli/terminal/.cargo/: config.toml
apps/cli/terminal/app/: app.config.ts  app.vue
apps/cli/terminal/public/: app.js  index.html  styles.css
apps/cli/terminal/src/: error.rs  lib.rs  main.rs  prelude.rs  telemetry.rs
apps/cli/terminal/tests/: integration.rs
apps/cli/terminal/types/: index.ts
apps/desktop/ide/: .gitignore  Cargo.toml  Config.toml  README.md  deny.toml  package.json  tauri.conf.json  tracing.toml
apps/desktop/ide/.cargo/: config.toml
apps/desktop/ide/capabilities/: default.json
apps/desktop/ide/pkg/: package.json
apps/desktop/ide/src/: error.rs  lib.rs  main.rs  prelude.rs  telemetry.rs
rust-packages/cli/debug/: Cargo.toml  Config.toml  package.json  tracing.toml
rust-packages/cli/debug/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  mod.rs  telemetry.rs
rust-packages/cli/tests/: Cargo.toml  package.json
rust-packages/cli/tests/src/: error.rs  lib.rs
rust-packages/components/chunkers/: Cargo.toml  README.md  package.json
rust-packages/components/chunkers/src/: code_aware.rs  config.rs  constants.rs  error.rs  lib.rs  recursive.rs  semantic.rs  telemetry.rs  types.rs
rust-packages/components/parsers/: Cargo.toml  Config.toml  README.md  deny.toml  package.json  tracing.toml
rust-packages/components/parsers/.cargo/: config.toml
rust-packages/components/parsers/src/: config.rs  error.rs  lib.rs  telemetry.rs
rust-packages/components/parsers/tests/: integration.rs
rust-packages/components/prompts/: Cargo.toml  README.md  package.json
rust-packages/components/prompts/examples/: autocomplete.rs  basic.rs  spinner.rs  wizard.rs
rust-packages/components/prompts/src/: completion.rs  error.rs  event.rs  form.rs  history.rs  keybind.rs  lib.rs  prompt.rs  render.rs  spinner.rs  template.rs  theme.rs  validation.rs
rust-packages/components/safety/: Cargo.toml  package.json
rust-packages/components/safety/src/: content_filter.rs  guardrails.rs  lib.rs  moderation.rs  pii.rs  types.rs
rust-packages/integration/ci/: Cargo.toml  Config.toml  README.md  deny.toml  package.json  tracing.toml
rust-packages/integration/ci/benches/: pipelines.rs
rust-packages/integration/ci/src/: error.rs  lib.rs  prelude.rs
rust-packages/integration/ci/tests/: integration.rs
rust-packages/integration/extensions/: Cargo.toml  Config.toml  README.md  deny.toml  package.json  tracing.toml
rust-packages/integration/extensions/.cargo/: config.toml
rust-packages/integration/extensions/benches/: loading.rs
rust-packages/integration/extensions/src/: config.rs  error.rs  initialization.rs  lib.rs  prelude.rs  telemetry.rs
rust-packages/integration/extensions/tests/: manager.rs
rust-packages/integration/extensions/wit/: types.wit  world.wit
rust-packages/lib/ai-reasoning/: Cargo.toml  README.md  package.json
rust-packages/lib/ai-reasoning/src/: agent.rs  config.rs  lib.rs
rust-packages/lib/cache/: Cargo.toml  Config.toml  README.md  deny.toml  package.json  tracing.toml
rust-packages/lib/cache/.cargo/: config.toml
rust-packages/lib/cache/benches/: cache_bench.rs
rust-packages/lib/cache/src/: error.rs  lib.rs  prelude.rs  telemetry.rs
rust-packages/lib/cache/tests/: cache_test.rs
rust-packages/lib/config/: Cargo.toml  Config.toml  README.md  deny.toml  package.json  tracing.toml
rust-packages/lib/config/.cargo/: config.toml
rust-packages/lib/config/docs/: comparison-config-features.md  idea-features.md
rust-packages/lib/config/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  prelude.rs  telemetry.rs  types.rs
rust-packages/lib/context/: Cargo.toml  Config.toml  README.md  deny.toml  package.json  tracing.toml
rust-packages/lib/context/.cargo/: config.toml
rust-packages/lib/effects/: Cargo.toml  Config.toml  README.md  deny.toml  package.json  tracing.toml
rust-packages/lib/evals/: Cargo.toml  Config.toml  README.md  package.json
rust-packages/lib/memories/: Cargo.toml  README.md  package.json
rust-packages/lib/models/: Cargo.toml  Config.toml  README.md  deny.toml  package.json  tracing.toml
rust-packages/lib/parsers/: Cargo.toml  README.md
rust-packages/lib/schemas/: .gitignore  Cargo.toml  Config.toml  README.md  comparison-schema-validation.md  deny.toml  idea-features.md  package.json  tracing.toml
rust-packages/lib/search/: Cargo.toml  README.md  package.json
rust-packages/lib/streams/: Cargo.toml  Config.toml  README.md  comparison-streaming-libraries.md  package.json
rust-packages/lib/tasks/: Cargo.toml  Cargo.workspace.toml  Config.toml  README.md  build.rs  deny.toml  package.json
rust-packages/lib/telemetry/: Cargo.toml  README.md  package.json
rust-packages/lib/wpty/: Cargo.toml  Config.toml  README.md  package.json
rust-packages/services/agent/: Cargo.toml  Config.toml  README.md  package.json
rust-packages/services/ai-rags/: Cargo.toml  README.md  package.json
(+7961 files in other folders)
