[package]
name = "marketplace-api"
version = "0.1.0"
edition = "2021"
description = "Extension marketplace API for wterminal"
authors = ["wterminal contributors"]

[dependencies]
# Web framework
axum = "0.8.0"
tower = "0.5.0"
tower-http = { version = "0.6.0", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# Database
sqlx = { version = "0.8.0", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json", "macros", "migrate"], default-features = false }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Configuration
figment = { version = "0.10.19", features = ["toml", "env"] }
toml = "0.8.14"

# Observability
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Authentication
jsonwebtoken = "9.3.0"

# Time
chrono = { version = "0.4.38", features = ["serde"] }

# UUID
uuid = { version = "1.12.0", features = ["v4", "serde"] }

# Validation
validator = { version = "0.19.0", features = ["derive"] }

[features]
default = []
offline = []

[dev-dependencies]
tokio-test = "0.4.4"
