[package]
name = "ai-tui"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[[bin]]
name = "ai-tui"
path = "src/main.rs"
required-features = ["full"]

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = "0.4.43"
crossterm = "0.29.0"
figment = { version = "0.10.19", features = ["toml", "env"] }
ignore = "0.4.25"
ratatui = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tui-textarea = "0.7.0"
validator = { version = "0.20", features = ["derive"] }
walkdir = "2.5.0"

# F1: TUI Framework
tui-components = "0.1.2"

# F3: Code Understanding
parsers = { path = "../../rust-packages/components/parsers", package = "document-parsers", optional = true }

# F4: Filesystem
filesystem = { path = "../../rust-packages/utils/filesystem", features = ["navigation", "search"] }

# F5: AI & ML
# ai = { path = "../../rust-packages/services/orchestrator", features = ["completion", "embeddings", "rags"], optional = true }
# cache = { path = "../../rust-packages/lib/cache", features = ["in-memory", "disk"], optional = true }
# completion = { path = "../../rust-packages/services/completion", optional = true }
# streaming = { path = "../../rust-packages/lib/streams", optional = true }

# F6: MCP & Extensions
# extensions = { path = "../../rust-packages/integration/extensions", optional = true }
# mcp = { path = "../../rust-packages/services/mcp", optional = true }

# F7: Code Analysis
# context = { path = "../../rust-packages/lib/context", optional = true }
# embeddings = { path = "../../rust-packages/services/embeddings", optional = true }
# rags = { path = "../../rust-packages/services/ai-rags", optional = true }
# sandbox = { path = "../../rust-packages/services/computer-use", package = "computer-use", optional = true }
# semantic-search = { path = "../../rust-packages/services/semantic", optional = true }

# F8: Automation
# git = { path = "../../rust-packages/utils/git", features = ["workflow", "github", "analytics", "graph"], optional = true }

# F9: Utilities
# task = { path = "../../rust-packages/lib/tasks", optional = true }
futures-util = "0.3.31"

[features]
default = ["dep:parsers"]
minimal = []
full = ["dep:parsers"]

[dev-dependencies]
cargo-nextest = "0.9"
criterion = "0.8.1"
mockall = "0.14.0"
pretty_assertions = "1.4.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
