[package]
name = "rvim"
version = "0.1.0"
edition = "2021"

[dependencies]
# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Configuration
figment = { version = "0.10", features = ["env", "toml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Date & Time
chrono = { version = "0.4", features = ["serde"] }

# Input Validation
validator = { version = "0.20", features = ["derive"] }

# Terminal & TUI
crossterm = "0.27"
ratatui = "0.27"
portable-pty = "0.9"
termwiz = "0.22.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
# Testing
cargo-nextest = "0.9"
mockall = "0.14"
pretty_assertions = "1"

# Benchmarking
criterion = "0.5"

# Tree-sitter & Syntax Highlighting
tree-sitter = "0.24"
tree-sitter-highlight = "0.24"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.23"
tree-sitter-json = "0.24"

# LSP
tower-lsp = "0.20"
lsp-types = "0.97"
async-trait = "0.1"
once_cell = "1.19"

# Text Manipulation
regex = "1.10"
unicode-segmentation = "1.11"
url = "2.5"

# AI Features
reqwest = { version = "0.12", features = ["json"] }

# Remote Development
russh = "0.42.0"
russh-keys = "0.42"

# Markdown Preview
pulldown-cmark = "0.11"

# Global Search
grep-searcher = "0.1"
grep-regex = "0.1"

# Tree-sitter utilities
streaming-iterator = "0.1"
