[package]
name = "terminal"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "wterminal"
path = "src/cli/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
portable-pty = "0.9.0"
wpty = { path = "../../rust-packages/lib/wpty" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.17"
anyhow = "1.0.100"
tokio = { version = "1.49.0", features = ["full"] }
figment = { version = "0.10.19", features = ["toml", "env", "json"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tauri = { version = "2.9.5", features = [] }
dashmap = "6.1.0"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
toml = "0.9.8"

# WebGPU & Rendering
wgpu = "28.0.0"
bytemuck = { version = "1.24.0", features = ["derive"] }

# Graphics Protocols
image = "0.25.9"
base64 = "0.22.1"

# WASM Plugins
wasmtime = "26.0.0"
wasmtime-wasi = "26.0.0"

# AI & ML
candle-core = "0.9.1"
candle-transformers = "0.9.1"
candle-nn = "0.9.1"

# Networking & Collaboration
webrtc = "0.14.0"
webpki-roots = "1.0.5"

# Git Integration
# git = { path = "../../rust-packages/dev-tools/git" }

# Context Analysis
# context = { path = "../../rust-packages/foundation/context" }

# Config Management
# config = { path = "../../rust-packages/foundation/config" }

# SSH/SFTP
openssh = "0.11.6"

# Vector Database
qdrant-client = "1.16.0"

# Performance
parking_lot = "0.12.5"
crossbeam = "0.8.4"
rayon = "1.11.0"

# Serialization
bincode = "3.0.0"
rmp-serde = "1.3.1"

# Async
futures = "0.3.31"
async-trait = "0.1.89"

# Error Handling
miette = { version = "7.6.0", features = ["fancy"] }

# Utilities
indexmap = { version = "2.13.0", features = ["serde"] }
regex = "1.12.2"
glob = "0.3.3"
walkdir = "2.5.0"
notify = "8.2.0"

# Cryptography
ring = "0.17.14"
argon2 = "0.5.3"
sha2 = "0.10.8"

# HTTP Client
reqwest = { version = "0.12", features = ["json"] }

# ID Generation
nanoid = "0.4.0"

# Compression
flate2 = "1.1.8"
brotli = "8.0.2"

# Time
humantime = "2.3.0"

# Logging
tracing-appender = "0.2.4"
tracing-opentelemetry = "0.32.1"
opentelemetry = "0.31.0"

# Metrics
prometheus = "0.14.0"
metrics = "0.24.3"

# Configuration
cfg-if = "1.0.4"
directories = "6.0.0"

# Clipboard
arboard = "3.6.1"

# Process Management
sysinfo = "0.37.2"

# Terminal Emulation
vte = "0.15.0"
ansi-parser = "0.9.1"

# Input
winit = "0.30.12"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }
colored = "2.1"
indicatif = "0.17"
console = "0.15"
fs_extra = "1.3"
git2 = "0.20"

# Audio (for voice chat)
rodio = "0.21.1"

# Database
sqlx = { workspace = true }
heed = "0.22.1-nested-rtxns-6"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }
