[package]
name = "ide"
version = "0.0.0"
description = "A Rust native IDE-like tool"
authors = ["you"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/user/repo" # TODO: Replace with actual repository URL

[lib]
name = "ide_lib"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
ai = { path = "../../rust-packages/services/orchestrator" }
anyhow = "1.0.100"
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
ci-cd = { path = "../../rust-packages/integration/ci" }
console_error_panic_hook = "0.1.7"
# dev-tools = { path = "../../rust-packages/dev-tools", features = ["lsp", "debugging", "testing", "refactoring", "profiler", "performance"] }
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = "0.33.3"
extensions = { path = "../../rust-packages/integration/extensions" }
figment = { version = "0.10.19", features = ["toml", "env"] }
filesystem = { path = "../../rust-packages/utils/filesystem", features = ["navigation", "search"] }
log = "0.4.29"
lsp-types = "0.97.0"
once_cell = "1.21.3"
pulldown-cmark = { version = "0.13.0", features = ["html"] }
reqwest = { version = "0.13.1", features = ["json"] }
rfd = "0.17.2"
desktop-components = { path = "../../rust-packages/components/ui/desktop-components" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syntect = { version = "5.3.0", default-features = false, features = ["html", "parsing", "yaml-load", "dump-load", "fancy-regex"] }
syntect-assets = { version = "0.23.6", default-features = false, features = ["regex-fancy"] }
# task = { path = "../../bun-packages/task" }  # Bun package, not available in Cargo
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.8"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.8"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
wasm-bindgen = "0.2.108"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3.6.1"
# git = { path = "../../rust-packages/dev-tools/git", features = ["full"] }
regex = "1.12.2"
terminal = { path = "../../apps/terminal" }
wpty = { path = "../../rust-packages/lib/wpty" }

[features]
default = []

[dev-dependencies]
mockall = "0.14.0"
pretty_assertions = "1.4.1"
