[package]
name = "testing"
version = "0.1.0"
edition = "2021"
description = "Comprehensive testing framework with parallelization, caching, mocking, and CI/CD integrations"
authors = ["wterminal contributors"]
license = "MIT"
keywords = ["testing", "parallel", "cache", "mock", "snapshot"]
categories = ["development-tools::testing"]

[dependencies]
# Error Handling
anyhow = "1.0"
thiserror = "2.0.17"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1.40"

# Async
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "sync", "fs", "process", "time"] }
async-trait = "0.1.89"
futures = "0.3.31"

# Parallelization
rayon = "1.10"
num_cpus = "1.16"
crossbeam = "0.8"

# Caching
blake3 = { version = "1.5", features = ["pure"] }
sha2 = "0.10"
hex = "0.4"

# Graph (Dependencies)
petgraph = "0.6"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.11", features = ["v4", "serde"] }

# Regex & Glob
regex = "1.10"
glob = "0.3"

# File watching
notify = "8.0"

# Report Export
handlebars = "6.3"
quick-xml = { version = "0.37", features = ["serialize"] }

# Config
toml = "0.8.14"

# Utilities
dashmap = "6.1"
parking_lot = "0.12"
walkdir = "2.5"

# Database (optional)
rusqlite = { version = "0.38", features = ["bundled", "chrono", "uuid"], optional = true }

[features]
default = ["core"]
core = []
database = ["dep:rusqlite"]

[dev-dependencies]
tempfile = "3.10"

[lib]
name = "testing"
path = "src/lib.rs"
