[package]
name = "chunking-strategies"
version = "0.1.0"
edition = "2021"
description = "Advanced chunking strategies (Recursive, Semantic, Code-aware)"

[lib]
crate-type = ["rlib"]

[dependencies]
# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Async
tokio = { version = "1.49.0", features = ["full"] }

# Config
figment = { version = "0.10", features = ["toml", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

# Text Processing
regex = "1.11"

# Math
ndarray = "0.17"

# Internal
embeddings = { path = "../../services/embeddings" }

[dev-dependencies]
mockall = "0.14"
pretty_assertions = "1.4"
