[package]
name = "document-parsers"
version = "0.1.0"
edition = "2021"
description = "Document parsers for RAG systems (PDF, Markdown, HTML, DOCX, Text, Code)"

[lib]
crate-type = ["rlib"]

[dependencies]
# Error Handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Async
tokio = { version = "1.49.0", features = ["full"] }

# Config
figment = { version = "0.10.19", features = ["toml", "env"] }

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Caching
cache = { path = "../../lib/cache" }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Document Parsing
pdf-extract = "0.10.0"
pulldown-cmark = "0.13.0"
scraper = "0.25.0"
quick-xml = { version = "0.39.0", features = ["serialize"] }

# Text Processing
regex = "1.12.2"
encoding_rs = "0.8.35"

[dev-dependencies]
mockall = "0.14.0"
pretty_assertions = "1.4.1"
