[package]
name = "ai-safety"
version = "0.1.0"
edition = "2021"
description = "AI safety guardrails and content filtering"

[lib]
name = "ai_safety"
path = "src/lib.rs"

[dependencies]
# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Async Runtime
tokio = { version = "1.49.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

# Regex for pattern matching
regex = "1.10"

# Observability
tracing = "0.1"

# Internal dependencies
ai-models = { path = "../ai-models" }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
