[package]
name = "extensions"
version = "0.1.0"
edition = "2021"
description = "Extension registry and API for wterminal"
authors = ["wterminal contributors"]

[dev-dependencies]
tempfile = "3.24.0"
mockall = "0.14.0"
pretty_assertions = "1.4.1"
criterion = "0.5"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }

[dependencies]
# Error Handling
anyhow = "1.0.100"
thiserror = "2.0.17"
serde_json = "1.0"

# Async
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "sync", "fs", "process"] }
async-trait = "0.1.89"
futures = "0.3.31"

# Config
figment = { version = "0.10.19", features = ["toml", "env"] }
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"

# Observability
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
metrics = "0.24.0"
metrics-exporter-prometheus = { version = "0.16.0", optional = true }

# WASM
wasmtime = { version = "26.0.0", default-features = false, features = ["component-model"] }
wasmtime-wasi = "26.0.0"

# HTTP Client
reqwest = { version = "0.12", features = ["json"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.12.0", features = ["v4", "serde"] }

# Other
topological-sort = "0.2"

# Validation
validator = { version = "0.20", features = ["derive"] }

[features]
default = []
metrics = ["metrics-exporter-prometheus"]
webview = []

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libloading = "0.9.0"
notify = "8.2.0"
