[package]
name = "ai-memories"
version = "0.1.0"
edition = "2021"
description = "Advanced reasoning engine combining LLM-based and symbolic reasoning"
license = "MIT"

[dependencies]

# Core
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
prompt = { path = "../../components/prompts" }  # same directory

# Asynchronous
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Networking
reqwest = { version = "0.12", features = ["json"], optional = true }

# Observability & Debugging
tracing = { version = "0.1", optional = true }
uuid = { version = "1", features = ["v4"] }

[features]
default = []
networking = ["reqwest"]
tracing-support = ["tracing"]


