[package]
name = "cache"
version = "0.1.0"
edition = "2021"
description = "Generic caching library with multiple storage backends"

[lib]
name = "cache"
path = "src/lib.rs"

[dependencies]
# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Configuration
figment = { version = "0.10", features = ["env", "toml"] }
validator = { version = "0.20", features = ["derive"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Async Runtime
tokio = { version = "1.49.0", features = ["full"] }
async-trait = "0.1"

# Caching
moka = { version = "0.12", features = ["future"] }

# Persistent Storage
sled = "0.34"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"], optional = true }

# Logging & Tracing
tracing = "0.1"

# Time
chrono = "0.4"

# Hashing
blake3 = "1.5"

# Observability
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
tempfile = "3.10"
criterion = "0.5"

[[bench]]
name = "cache_bench"
harness = false

[features]
default = ["in-memory", "disk"]
in-memory = []
disk = []
redis = ["dep:redis"]
telemetry = ["tracing-subscriber"]
