[package]
name = "wai-config"
version = "0.1.0"
edition = "2021"
description = "Configuration management suite for wterminal IDE"

[dependencies]
# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Config
figment = { version = "0.10", features = ["toml", "env", "json"] }
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time
chrono = "0.4"

[dev-dependencies]
mockall = "0.14"
pretty_assertions = "1.4"
tempfile = "3.10"
