[package]
name = "context"
version = "0.1.0"
edition = "2021"
description = "Project context analysis suite for wterminal IDE"

[dependencies]
# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }

# Async
tokio = { version = "1.49.0", features = ["full"] }
async-trait = "0.1"

# Filesystem
notify = "7.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.20", features = ["derive"] }

# Concurrency
parking_lot = "0.12"

# AST Parsing
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"

[dev-dependencies]
# Testing
cargo-nextest = "0.9"
mockall = "0.14"
pretty_assertions = "1.4"
tempfile = "3.10"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
