[package]
name = "effect"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[features]
default = []
telemetry-otlp = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]
metrics-prometheus = ["dep:metrics-exporter-prometheus"]
property-testing = ["dep:rand"]
shadow-traffic = ["dep:rand"]
distributed = ["dep:uuid", "dep:rand"]

[dependencies]
thiserror = "2.0.18"
anyhow = "1.0.101"
tokio = { version = "1.49.0", features = ["full"] }
async-trait = "0.1.89"
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
figment = { version = "0.10.19", features = ["env", "toml"] }

# Observability
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json", "registry"] }
metrics = "0.24.3"

# Validation & Time (from resilience)
chrono = { version = "0.4.43", features = ["serde"] }
validator = { version = "0.20.0", features = ["derive"] }
serde_json = "1.0.149"

# Random (for property testing, shadow traffic)
rand = { version = "0.8", optional = true }
uuid = { version = "1.0", features = ["v4"], optional = true }

# Optional dependencies for telemetry
opentelemetry = { version = "0.31.0", optional = true }
opentelemetry_sdk = { version = "0.31.0", optional = true, features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", optional = true, features = ["tonic"] }
tracing-opentelemetry = { version = "0.32.1", optional = true }
metrics-exporter-prometheus = { version = "0.18.1", optional = true }

[dev-dependencies]
mockall = "0.14.0"

[lib]
name = "effect"
path = "src/lib.rs"

[[bin]]
name = "effect"
path = "src/main.rs"
