[package]
name = "ai-memories"
version = "0.1.0"
edition = "2024"
description = "Memory systems for AI agents - long-term, short-term, and working memory"

[dependencies]
# Core dependencies
rand = "0.8"
rand_distr = "0.4"
ndarray = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Database (for LongTermMemory)
sled = "0.34"

# Cache (for LongTermMemory)
lru = "0.12"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }

