[package]
name = "ai-models"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[lib]
name = "ai_models"
path = "src/lib.rs"

[[bin]]
name = "ai-models"
path = "src/main.rs"

[dependencies]
# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Async Runtime
tokio = { version = "1.49.0", features = ["full"] }

# Configuration
figment = { version = "0.10", features = ["env", "toml"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

# HTTP Client
reqwest = { version = "0.11", features = ["json", "stream"] }

# Async
async-trait = "0.1"
futures = "0.3"

# Bytes
bytes = "1"

# Hashing
md5 = "0.7"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# AWS SDK
aws-config = "1.1.7"
aws-sdk-bedrockruntime = "1.16.0"
aws-sigv4 = "1.1.7"

[dev-dependencies]
# Testing
mockall = "0.12"

[features]
default = []
testing = []
