[package]
name = "schema"
version = "0.1.0"
edition = "2021"
description = "Type-safe schema validation library with zero-copy parsing and composable validators"

[lib]
name = "schema"
path = "src/lib.rs"

[dependencies]
# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

# Validation
regex = "1.10"
url = "2.5"
email_address = "0.2"

# Async Runtime
tokio = { version = "1.49.0", features = ["full"] }
async-trait = "0.1"

# Configuration
figment = { version = "0.10", features = ["env", "toml"] }

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
once_cell = "1.19"
indexmap = "2.2"

# Derive Macro
schema-derive = { path = "../schema-macros" }

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"
criterion = "0.5"
mockall = "0.14"

[features]
default = ["sync", "telemetry"]
sync = []
async = []
telemetry = []
