[package]
name = "codesearch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.59", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time", "signal"] }
ignore = "0.4.25"
regex = "1.12.3"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
streaming-iterator = "0.1.9"
lsp-types = { version = "0.97.0", optional = true }
qdrant-client = { version = "1.16.0", optional = true }
reqwest = { version = "0.13.2", features = ["json", "blocking"], optional = true }
semantic-search = { path = "../ai/semantic-search", optional = true }
sled = { version = "0.34.7", optional = true }
blake3 = { version = "1.8.3", optional = true }
bincode = { version = "3.0.0", optional = true }
rayon = "1.11.0"
notify = "8.2.0"
fuzzy-matcher = "0.3.7"
levenshtein = "1.0.5"
git2 = "0.20.4"
figment = { version = "0.10.19", features = ["toml", "env"] }
async-trait = "0.1.89"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
parking_lot = "0.12.5"
dashmap = "6.1.0"
arc-swap = "1.8.2"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "git_perf"
harness = false

[features]
default = ["text"]
text = []
syntax = [
    "tree-sitter",
    "tree-sitter-rust",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-python",
    "tree-sitter-go",
    "tree-sitter-json",
]
symbol = ["lsp-types", "syntax"]
semantic = ["semantic-search", "reqwest", "qdrant-client", "sled", "blake3", "bincode"]
lsp = ["lsp-types"]

[dependencies.tree-sitter]
version = "0.24"
optional = true

[dependencies.tree-sitter-rust]
version = "0.24.0"
optional = true

[dependencies.tree-sitter-javascript]
version = "0.25.0"
optional = true

[dependencies.tree-sitter-typescript]
version = "0.23.2"
optional = true

[dependencies.tree-sitter-python]
version = "0.25.0"
optional = true

[dependencies.tree-sitter-go]
version = "0.25.0"
optional = true

[dependencies.tree-sitter-json]
version = "0.24.8"
optional = true
