[package]
name = "streaming"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.49.0", features = ["full"] }
async-trait = "0.1"
tokio-stream = "0.1"
futures = "0.3"
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
cargo-nextest = "0.9"
mockall = "0.12"

[lib]
name = "streaming"
path = "src/lib.rs"

[[bin]]
name = "streaming"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
