[package]
name = "task"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Async Runtime
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3.31"

# Configuration
figment = { version = "0.10.19", features = ["toml", "env"] }
toml = "0.9.8"

# Observability
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Error Handling
thiserror = "2.0.18"
anyhow = "1.0.100"

# Async traits
async-trait = "0.1.89"

# Time handling
chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }

# CRON scheduling
cron = "0.15.0"

# Parallel processing (rayon)
rayon = "1.10.0"

# Queue storage
rusqlite = { workspace = true }
sqlx = { workspace = true }
dashmap = "6.1.0"
rand = "0.9.2"
metrics = "0.24.3"

# Persistence
redis = { version = "1.0.2", features = ["tokio-comp", "connection-manager"], optional = true }

# Metrics
prometheus = { version = "0.14.0", optional = true }

# Distributed execution
etcd-client = { version = "0.18.0", optional = true }

# Retry logic
tokio-retry = "0.3.0"

# Input validation
validator = { version = "0.20.0", features = ["derive"] }

# Node.js FFI
napi = { version = "3.8.2", default-features = false, features = ["napi8", "async"], optional = true }
napi-derive = { version = "3.5.1", optional = true }

[build-dependencies]
napi-build = { version = "2.3.1", optional = true }

[dev-dependencies]
mockall = "0.14.0"
pretty_assertions = "1.4.1"
criterion = "0.8.1"

[features]
default = []
postgres = []
mysql = []
redis = ["dep:redis"]
all-databases = ["dep:redis"]
metrics = ["dep:prometheus"]
distributed = ["dep:etcd-client", "dep:redis"]
napi = ["dep:napi", "dep:napi-derive", "dep:napi-build"]
full = ["all-databases", "metrics", "distributed"]

[[bin]]
name = "task-cli"
path = "src/main.rs"
required-features = []
