[package]
name = "ai-agent"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[lib]
name = "ai_agent"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ai-agent"
path = "src/main.rs"

[dependencies]
ark-bls12-381 = { version = "0.4.0", optional = true }
ark-groth16 = { version = "0.4.0", features = ["r1cs"], optional = true }
ark-relations = { version = "0.4.0", optional = true }
ark-ff = { version = "0.4.0", optional = true }
ark-ec = { version = "0.4.0", optional = true }
warp = { version = "0.3.7", optional = true }
tokio-tungstenite = { version = "0.21.0", optional = true }
libloading = { version = "0.8.3", optional = true }
redis = { version = "0.25.4", features = ["tokio-comp"], optional = true }
wasm-bindgen = { version = "0.2.92", optional = true }
# Error Handling
thiserror = "2.0"
anyhow = "1.0"

# Async Runtime
tokio = { version = "1.49.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Configuration
figment = { version = "0.10", features = ["env", "toml"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-futures = "0.2.5"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"

# HTTP Client
reqwest = { version = "0.12", features = ["json", "stream"] }
async-openai = { version = "0.32.4", features = ["rustls"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Parallelism
rayon = "1.10.0"
base64 = "0.22.1"

# Internal workspace dependencies
ai-models = { path = "../../lib/models" }
ai-memories = { path = "../../lib/ai-reasoning" }
# browser-use = { path = "../../automation/browser-use" }
cache = { path = "../../lib/cache" }
embeddings = { path = "../../services/embeddings" }
rags = { path = "../../services/ai-rags" }
document-parsers = { path = "../../components/parsers" }
chunking-strategies = { path = "../../components/chunkers" }
telemetry = { path = "../../lib/telemetry" }
effect = { path = "../../lib/effects" }

[dev-dependencies]
mockall = "0.14"

[features]
default = []
testing = []
wasm = ["wasm-bindgen"]
